# data-exchange-scripts

./: .env.example  .gitignore  DataExchangeScripts.code-workspace  README.md  RiverscapesAPI.code-workspace  gpkg_cardinality_report.csv  graphql.config.json  install_geo.sh  main.py  my_awesome_search_results.json  pyproject.toml  rme_layer_definitions.json  setup.py
.devcontainer/: bootstrap.sh  devcontainer.json
.github/workflows/: lorin.yml  metadata-catalog.yml
graphql/queries/: queryIntrospect.graphql  searchCount2.graphql
inputs/: DEMO_search.json
metadata_schemas/: layer.schema.json  layer_catalog.schema.json  layer_definitions.schema.json
pipelines/: README-AthenaOrganization.md
pipelines/rme_to_athena/: CHANGELOG.md  add_simplified_geom_pq.py  layer_definitions.json  rme_to_athena_parquet.py
pipelines/rscontext_to_athena/: huc10_athena.py  layer_definitions.json  rscontext_to_athena.py
pipelines/rsdynamics_to_athena/: layer_definitions.json  rsdynamics_to_athena_parquet.py
pydex/: __init__.py  generate_python_classes_from_graphql_api.py  generated_types.py  imports.py  merge-projects.py  merge_rme_scrapes.py  raster.py  scrape_huc_statistics.py
pydex/classes/: RiverscapesAPI.py  riverscapes_helpers.py
pydex/graphql/: riverscapes.schema.graphql
pydex/graphql/mutations/: archiveProject.graphql  changeProjectOwner.graphql  finalizeProjectUpload.graphql  updateUser.graphql
pydex/graphql/queries/: checkUpload.graphql  getProjectFull.graphql  profile.graphql  projectFiles.graphql  requestUploadProject.graphql  requestUploadProjectFilesUrl.graphql  searchProjects.graphql
pydex/lib/: athena.py  raster.py  rs_geo_helpers.py
pydex/lib/dump/: dump_riverscapes.py
rsapi/: __init__.py  imports.py  merge-projects.py  merge_rme_scrapes.py  scrape-asotin.py  scrape-rme.py  scrape_huc_statistics.py  scrape_huc_statistics_batch.py  tag_projects.py
rsapi/classes/: RiverscapesAPI.py
rsapi/lib/dump/: delete_project_batch.py  dump_riverscapes.py  dump_riverscapes_sleep.py
rsapi/projectTypeTool/: projectTypeSync.py
scripts/: changeUserAvatar.py  changeVisibility.py  createVenv.sh  deleteProjects.py  downloadFiles.py  geojson_projection.py  load_owners_to_s3_table.py  project_upload.py  s3_athena_example.py  s3_table_example.py  scrape_asotin.py  tile_finder.py
scripts/athena_upload/: README.md  geopackage_athena_iceberg_download.md  geopackage_athena_iceberg_download.py  geopackage_athena_iceberg_upload.md  geopackage_athena_iceberg_upload.py
scripts/dumpers/: dump_geom.py  dump_projects_to_athena.py  dump_riverscapes.py  dump_riverscapes_sleep.py  dump_views.py  dump_yankee_fork_bounds.py
scripts/geo/: add_simplified_geom_pq.py  athena_query_aoi.py  athena_to_rme.py  athenacsv_to_rme.py  dgos_to_athena.py  merge-projects.py  merge_rme_scrapes.py  old_raster_to_cog.py  review_geopackage_cardinality.py  review_geopackage_cardinality_results.py  review_parquet.py  rme_table_column_defs.csv  rme_to_athena.py  rme_to_athena_parquet.py  simplify.py  status_maps.py  status_maps_athena.py  stream_csv_s3.py
scripts/metadata/: csv_to_layer_definitions.py  flatten_layer_catalog.py  layer_definitions.json  layer_definitions_export.csv
scripts/projectTypeTool/: projectTypeSync.py  projectTypes.json
scripts/rme_to_athena/: layer_catalog.json  layer_definitions.json  riverscapes_metrics_layerdef.json
scripts/rpt_rme/: layer_catalog.json  layer_definitions.json  rpt_rme_layerdef.json
scripts/scrapers/: download_project_files_by_csv.py  huc10_athena.py  scrape_asotin.py  scrape_huc_statistics.py  scrape_huc_statistics_batch.py  scrape_pbr.py  scrape_rme.py  scrape_rme2.py  test.py
scripts/utility/: addTags.py  add_projects_to_collection.py  archive_projects.py  byteSize.py  champ_aux_measurements.py  champ_aux_measurements_postgres.py  champ_aux_measurements_sqlite.py  champ_tags.py  changeOwnership.py  changeVisibility.py  change_ownership_by_csv.py  compare_parquet_files.py  convert_reqs.py  create_collection.py  delete_project_batch.py  delete_projects.py  delete_projects_by_csv.py  delete_projects_by_tag.py  demo_search.py  download_files.py  essentialTags.py  essential_tags.py  extract10linesoffile.py  file_download.py  load_project_guids_from_csv.py  lsg_convert_dict_to_cmds.py  lsg_demo_search.py  lsg_list_matching_projects.py  new_project_upload.py  projectHeroImage.py  project_upload.py  rebuild_tiles.py  removeEssentialTags.py  scrape_pbr.py  scraper_project.py  searchTest.py  tag_projects.py  upload_projects_batch.py
scripts/utility/fixRmeTools/: README.md  copy_project_bounds_xml.py  (+7 more)
thirdpartydata/climate_engine/: layer_definitions.json
(+11 files in other folders)
