[project]
name = "pydex"
version = "0.1.0"
authors = [
    { name = "Matt Reimer", email = "matt@northarrowresearch.com" }
]
description = "Client scripts for the Riverscapes Data Exchange API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "apsw>=3.49.1.0",
  "boto3>=1.7.84",
  "geopandas>=1.0.1",
  "graphql-core==3.2.6",
  "inquirer==3.4.0",
  "lxml==5.3.1",
  "matplotlib>=3.9.4",
  "pyarrow>=21.0.0",
  "pyathena>=2.9.4",
  "jsonschema>=4.17.3",
  "python-dateutil==2.9.0.post0",
  "requests==2.32.3",
  "rsxml==2.0.6",
  "semver==3.0.4",
  "setuptools==76.0.0",
  "six==1.17.0",
  "termcolor==2.5.0",
  "urllib3>=2.3",
  "riverscapes-metadata @ git+https://github.com/Riverscapes/RiverscapesXML.git@8c9a1b93a609f207f392fb20d4620523f373ba0e#subdirectory=riverscapes_metadata"
]

[project.optional-dependencies]
geo = [
  "gdal>=3.2.2",
  "shapely>=2.1.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pydex = ["**/*.graphql", "**/*.json"]
