[project]
name = "pydex"
version = "0.1.0"
authors = [
    { name = "Matt Reimer", email = "matt@northarrowresearch.com" }
]
description = "Client scripts for the Riverscapes Data Exchange API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "apsw>=3.49.1.0",
  "boto3>=1.7.84",
  "geopandas>=1.0.1",
  "graphql-core==3.2.6",
  "inquirer==3.4.0",
  "lxml==5.3.1",
  "matplotlib>=3.9.4",
  "pyarrow>=21.0.0",
  "pyathena>=2.9.4",
  "jsonschema>=4.17.3",
  "python-dateutil==2.9.0.post0",
  "requests==2.32.3",
  "rsxml==2.0.6",
  "ruff>=0.9.0",
  "semver==3.0.4",
  "setuptools==76.0.0",
  "six==1.17.0",
  "termcolor==2.5.0",
  "urllib3>=2.3",
  "riverscapes-metadata @ git+https://github.com/Riverscapes/RiverscapesXML.git@master#subdirectory=riverscapes_metadata",
  "awswrangler>=3.10.1",
  "pandas>=2.3.3",
  "pyiceberg[pyarrow]>=0.7.0",
  "pyproj>=3.6",
  "tqdm>=4.67.1",
  "questionary>=2.0.0",
  "rich>=13.0",
  "pyogrio>=0.7",
]

[project.optional-dependencies]
geo = [
  "shapely>=2.1.1",
]
# NOTE: gdal is intentionally excluded from the geo extra because the Python
# gdal package version must exactly match the system libgdal version, which
# varies per developer environment. Use `install_geo.sh` to install gdal.

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pydex = ["**/*.graphql", "**/*.json"]

[tool.ruff]
line-length = 240
target-version = "py312"

# Paths ruff should never touch
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    "help",
    "wheels",
]

# ── Lint ─────────────────────────────────────────────────────────────────────
[tool.ruff.lint]

select = [
    "E",    # pycodestyle errors   (replaces pycodestyle / autopep8 checks)
    "W",    # pycodestyle warnings
    "F",    # pyflakes             (undefined names, unused imports, …)
    "I",    # isort                (replaces the isort tool)
    "UP",   # pyupgrade            (modernise Python syntax automatically)
    "B",    # flake8-bugbear       (likely bugs and design issues)
    "N",    # pep8-naming          (replaces pylint naming checks)
    "RUF",  # ruff-specific rules  (redundant noqa, mutable class vars, …)
]

[tool.ruff.lint.isort]
# Tells Ruff exactly which imports are "local" to your project
known-first-party = ["pydex"]
combine-as-imports = true

# ── Format (replaces autopep8) ────────────────────────────────────────────────
[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending  = "lf"
